Workaround powermock issue