@@ -2,6 +2,11 @@ project.description = 'Vividus utilities'
 
 ext.jsonPathVersion = '2.6.0'
 
+//https://github.com/powermock/powermock/issues/1094
+test {
+    jvmArgs '--illegal-access=warn'
+}
+
 dependencies {
     api(group: 'org.apache.commons', name: 'commons-pool2', version: '2.11.1')
     api(group: 'org.freemarker', name: 'freemarker', version: '2.3.31')
